tests/pytest/gold/redirecttestswithproxyproto/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {},
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "ambassador-edge-stack.default.1": {
            "_referenced_by": {},
            "ambassador_id": [
                "_automatic_"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "kind": "Mapping",
            "location": "ambassador-edge-stack.default.1",
            "metadata_labels": {
                "ambassador_crd": "ambassador-edge-stack.default",
                "ambassador_diag_class": "private",
                "product": "aes"
            },
            "name": "ambassador-edge-stack",
            "namespace": "default",
            "precedence": 1000000,
            "prefix": "/.ambassador/",
            "rewrite": "",
            "rkey": "ambassador-edge-stack.default.1",
            "serialization": "ambassador_id:\n- _automatic_\napiVersion: getambassador.io/v2\ngeneration: 1\nkind: Mapping\nmetadata_labels:\n  ambassador_crd: ambassador-edge-stack.default\n  ambassador_diag_class: private\n  product: aes\nname: ambassador-edge-stack\nnamespace: default\nprecedence: 1000000\nprefix: /.ambassador/\nrewrite: ''\nservice: 127.0.0.1:8500\n",
            "service": "127.0.0.1:8500"
        },
        "cleartext-host-redirecttestswithproxyproto.default.1": {
            "_referenced_by": {},
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "redirecttestswithproxyproto"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "*",
            "kind": "Host",
            "location": "cleartext-host-redirecttestswithproxyproto.default.1",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-redirecttestswithproxyproto.default",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-redirecttestswithproxyproto",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "rkey": "cleartext-host-redirecttestswithproxyproto.default.1",
            "selector": {
                "matchLabels": {
                    "hostname": "redirecttestswithproxyproto"
                }
            },
            "serialization": "acmeProvider:\n  authority: none\nambassador_id:\n- redirecttestswithproxyproto\napiVersion: getambassador.io/v2\ngeneration: 1\nhostname: '*'\nkind: Host\nmetadata_labels:\n  ambassador_crd: cleartext-host-redirecttestswithproxyproto.default\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: cleartext-host-redirecttestswithproxyproto\nnamespace: default\nrequestPolicy:\n  insecure:\n    action: Route\nselector:\n  matchLabels:\n    ho [...]
        },
        "k8s-redirecttestswithproxyproto-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest",
                "service": "redirecttestswithproxyproto-admin"
            },
            "name": "redirecttestswithproxyproto-admin",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-admin-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\n  service: redirecttestswithproxyproto-admin\nname: redirecttestswithproxyproto-admin\nnamespace: default\n"
        },
        "k8s-redirecttestswithproxyproto-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: redirecttestswithproxyproto\nnamespace: default\n"
        },
        "k8s-redirecttestswithproxyproto-http-default": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-redirecttestswithproxyproto-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto-http",
            "namespace": "default",
            "rkey": "k8s-redirecttestswithproxyproto-http-default",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: redirecttestswithproxyproto-http\nnamespace: default\n"
        },
        "redirecttestswithproxyproto-http.default.1": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "location": "redirecttestswithproxyproto-http.default.1",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "rkey": "redirecttestswithproxyproto-http.default.1",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: ambassador/v1\nkind: Mapping\nmetadata_labels:\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: tls_target_mapping\nnamespace: default\nprefix: /tls-target/\nservice: redirecttestswithproxyproto-http\n",
            "service": "redirecttestswithproxyproto-http"
        },
        "redirecttestswithproxyproto.default.1": {
            "_referenced_by": {},
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "config": {
                "enable_ipv6": true,
                "use_proxy_proto": true
            },
            "kind": "Module",
            "location": "redirecttestswithproxyproto.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "redirecttestswithproxyproto.default.1",
            "serialization": "ambassador_id: redirecttestswithproxyproto\napiVersion: ambassador/v1\nconfig:\n  enable_ipv6: true\n  use_proxy_proto: true\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: redirecttestswithproxyproto\n  scope: AmbassadorTest\nname: ambassador\nnamespace: default\n"
        }
    },
    "hosts": {
        "cleartext-host-redirecttestswithproxyproto": {
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "redirecttestswithproxyproto"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "*",
            "kind": "Host",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-redirecttestswithproxyproto.default",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-redirecttestswithproxyproto",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "selector": {
                "matchLabels": {
                    "hostname": "redirecttestswithproxyproto"
                }
            }
        }
    },
    "mappings": {
        "ambassador-edge-stack": {
            "ambassador_id": [
                "_automatic_"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "kind": "Mapping",
            "metadata_labels": {
                "ambassador_crd": "ambassador-edge-stack.default",
                "ambassador_diag_class": "private",
                "product": "aes"
            },
            "name": "ambassador-edge-stack",
            "namespace": "default",
            "precedence": 1000000,
            "prefix": "/.ambassador/",
            "rewrite": "",
            "service": "127.0.0.1:8500"
        },
        "tls_target_mapping": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v1",
            "kind": "Mapping",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "tls_target_mapping",
            "namespace": "default",
            "prefix": "/tls-target/",
            "service": "redirecttestswithproxyproto-http"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v1",
            "enable_ipv6": true,
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "use_proxy_proto": true
        }
    },
    "service": {
        "k8s-redirecttestswithproxyproto-admin-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest",
                "service": "redirecttestswithproxyproto-admin"
            },
            "name": "redirecttestswithproxyproto-admin",
            "namespace": "default"
        },
        "k8s-redirecttestswithproxyproto-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto",
            "namespace": "default"
        },
        "k8s-redirecttestswithproxyproto-http-default": {
            "ambassador_id": "redirecttestswithproxyproto",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "redirecttestswithproxyproto",
                "scope": "AmbassadorTest"
            },
            "name": "redirecttestswithproxyproto-http",
            "namespace": "default"
        }
    }
}
