tests/pytest/gold/redirecttestswithproxyproto/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"redirecttestswithproxyproto\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-redirecttestswithproxyproto\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"redirecttestswithproxyproto\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\ [...]
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-02-28T17:40:22Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "redirecttestswithproxyproto",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-redirecttestswithproxyproto",
                    "namespace": "default",
                    "resourceVersion": "24961",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/cleartext-host-redirecttestswithproxyproto",
                    "uid": "656b029f-5a51-11ea-a663-163f3a62b77d"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "redirecttestswithproxyproto"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "redirecttestswithproxyproto"
                        }
                    }
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"manual-secret\ [...]
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-02-28T17:40:05Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "24081",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/manual-host-context",
                    "uid": "5b42a54f-5a51-11ea-a663-163f3a62b77d"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "manual-secret"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Module\nname: ambassador\nconfig:\n  use_proxy_proto: true\n  enable_ipv6: true\nambassador_id: redirecttestswithproxyproto\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Module\\nname: ambassador\\nconfig:\\n  use_proxy_proto: true\\n  enable_ipv6: true\\nambassador_id: redirecttestswithproxyproto\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"redirecttestswithproxyproto\",\"scope\":\"Ambassador [...]
                    },
                    "creationTimestamp": "2020-02-28T17:40:22Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "redirecttestswithproxyproto",
                        "scope": "AmbassadorTest"
                    },
                    "name": "redirecttestswithproxyproto",
                    "namespace": "default",
                    "resourceVersion": "24952",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestswithproxyproto",
                    "uid": "655703df-5a51-11ea-a663-163f3a62b77d"
                },
                "spec": {
                    "clusterIP": "10.106.139.58",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31216,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31437,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "redirecttestswithproxyproto"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"redirecttestswithproxyproto\",\"scope\":\"AmbassadorTest\",\"service\":\"redirecttestswithproxyproto-admin\"},\"name\":\"redirecttestswithproxyproto-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"redirecttestswithproxyproto-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"servi [...]
                    },
                    "creationTimestamp": "2020-02-28T17:40:22Z",
                    "labels": {
                        "kat-ambassador-id": "redirecttestswithproxyproto",
                        "scope": "AmbassadorTest",
                        "service": "redirecttestswithproxyproto-admin"
                    },
                    "name": "redirecttestswithproxyproto-admin",
                    "namespace": "default",
                    "resourceVersion": "24956",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestswithproxyproto-admin",
                    "uid": "655ec028-5a51-11ea-a663-163f3a62b77d"
                },
                "spec": {
                    "clusterIP": "10.101.118.61",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "redirecttestswithproxyproto-admin",
                            "nodePort": 30498,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "redirecttestswithproxyproto"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Mapping\nname: tls_target_mapping\nprefix: /tls-target/\nservice: redirecttestswithproxyproto-http\nambassador_id: redirecttestswithproxyproto\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: tls_target_mapping\\nprefix: /tls-target/\\nservice: redirecttestswithproxyproto-http\\nambassador_id: redirecttestswithproxyproto\\n\"},\"labels\":{\"kat-ambassador-id\":\"redirecttestswithproxyproto\",\"scope\":\"AmbassadorTest\"},\"name\":\"redirecttestswithp [...]
                    },
                    "creationTimestamp": "2020-02-28T17:40:22Z",
                    "labels": {
                        "kat-ambassador-id": "redirecttestswithproxyproto",
                        "scope": "AmbassadorTest"
                    },
                    "name": "redirecttestswithproxyproto-http",
                    "namespace": "default",
                    "resourceVersion": "24963",
                    "selfLink": "/api/v1/namespaces/default/services/redirecttestswithproxyproto-http",
                    "uid": "65715aa9-5a51-11ea-a663-163f3a62b77d"
                },
                "spec": {
                    "clusterIP": "10.101.236.225",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8119
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8482
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
